# i2c-devs

./: CMakeLists.txt  README.md
kernel/: .gitignore  CMakeLists.txt
kernel/include/: i2c_devs.h  rtc.h
kernel/src/: CMakeLists.txt  Makefile  gpio.c  gpio.h  i2c.c  i2c.h  i2c_devs.c  i2c_devs.h  lcd.c  lcd.h  rtc.c
kernel/test/: CMakeLists.txt
kernel/test/unit/: CMakeLists.txt  add_tests.c  add_tests.h  test_gpio.c  test_gpio.h  test_i2c.c  test_i2c.h  test_lcd.c  test_lcd.h  test_rtc.c  test_rtc.h
shared/: shared.h
user/: CMakeLists.txt
user/include/: gpio.h  i2c.h  i2c_devs.h  i2c_devss.h  lcd.h  rtc.h
user/src/: CMakeLists.txt  gpio.c  i2c.c  i2c_devs.c  i2c_devss.c  lcd.c  rtc.c
